--- a/contact.html
+++ b/contact.html
@@ -118,9 +118,14 @@
           <label for="message" class="form__label">Message</label>
           <textarea name="message" id="message" cols="50" rows="5" class="form__text-area" placeholder="Type your message here ..." maxlength="1000" required></textarea>
   
+          <!-- Regular Form Buttons -->
           <input name="submit" type="submit" value="Submit" class="form__button button--positive">
           <input name="reset" type="reset" value="Reset" id="reset" class="form__button button--negative">
           <label for="reset" hidden>Reset</label>
+
+          <!-- Mobile Form Buttons -->
+          <input name="submit" type="submit" value="Submit" class="form__button--mobile button--primary button--large">
+          <input name="reset" type="reset" value="Reset" id="reset" class="form__button--mobile button--negative button--large">
           
         </form>
       </div>
