Begin building book details page.

--- a/books.html
+++ b/books.html
@@ -120,7 +120,7 @@
 
     <!-- Dividing Line -->
     <div class="books__container container">
-      <hr>
+      <hr class="books__dividing-line">
     </div>
 
 
