Building book details page.

--- a/book_details.html
+++ b/book_details.html
@@ -103,10 +103,17 @@
         <img class="book-details__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
       </div>
 
+
       <!-- Text Content -->
       <div class="book-details__column--wide">
+        <h3 class="book-details__heading">Book Title</h3>
+        <h5 class="book-details__author">Author</h5>
+        <h4 class="book-details__price">£7.99</h4>
 
+        <!-- Dividing Line -->
+        <hr class="book-details__dividing-line">
       </div>
+
 
       <!-- Categories Sidebar -->
       <div class="book-details__column--narrow">
@@ -171,6 +178,7 @@
         </div>
       </div>
     </div>
+
 
     <!-- Instructions For Use -->
     <div class="book-details__container container">
