Complete book details page at desktop size.

--- a/book_details.html
+++ b/book_details.html
@@ -87,7 +87,7 @@
     <div class="page-banner__bg-overlay"></div>
 
     <!-- Page Banner Title -->
-    <h1 class="page-banner__title">Author's Name</h1>
+    <h1 class="page-banner__title">J K Rowling</h1>
   </div>
 
 
@@ -106,12 +106,27 @@
 
       <!-- Text Content -->
       <div class="book-details__column--wide">
-        <h3 class="book-details__heading">Book Title</h3>
-        <h5 class="book-details__author">Author</h5>
+        <!-- Book Title -->
+        <h3 class="book-details__heading">Harry Potter and the Philosopher's Stone</h3>
+        <!-- Author -->
+        <h5 class="book-details__author">J K Rowling</h5>
+        <!-- Price -->
         <h4 class="book-details__price">£7.99</h4>
 
         <!-- Dividing Line -->
         <hr class="book-details__dividing-line">
+
+        <!-- Book Summary -->
+        <p class="book-details__summary">Harry Potter has never even heard of Hogwarts when the letters start dropping on the doormat at number four, Privet Drive. Addressed in green ink on yellowish parchment with a purple seal, they are swiftly confiscated by his grisly aunt and uncle. Then, on Harry's eleventh birthday, a great beetle-eyed giant of a man called Rubeus Hagrid bursts in with some astonishing news: Harry Potter is a wizard, and he has a place at Hogwarts School of Witchcraft and Wizardry. An incredible adventure is about to begin!</p>
+
+        <!-- Additional Info -->
+        <p class="book-details__additional-info">Having now become classics of our time, the Harry Potter ebooks never fail to bring comfort and escapism to readers of all ages. With its message of hope, belonging and the enduring power of truth and love, the story of the Boy Who Lived continues to delight generations of new readers.</p>
+
+        <!-- Buttons -->
+        <div class="book-details__button-wrapper">
+          <a href="basket.html" class="book-details__button button--primary">Add to Basket</a>
+          <a href="wishlist.html" class="book-details__button button--positive">Add to Wishlist</a>
+        </div>
       </div>
 
 
@@ -175,6 +190,16 @@
             <p class="book-details__category-name">Category</p>
             <p class="book-details__category-number">(10)</p>
           </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="book-details__category-name">Category</p>
+            <p class="book-details__category-number">(10)</p>
+          </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="book-details__category-name">Category</p>
+            <p class="book-details__category-number">(10)</p>
+          </a>
         </div>
       </div>
     </div>
@@ -183,7 +208,8 @@
     <!-- Instructions For Use -->
     <div class="book-details__container container">
       <div class="book-details__instructions">
-        
+        <h5>Download Instructions</h5>
+        <p>After you have completed your order, you will be taken to the payment confirmation screen where you will find the download link to your e-book. If you have registered as a member with us, you will also receive an email containing the download link. All of our e-books are provided in EPUB format. If you have an Amazon Kindle device, you can convert your EPUB file into a Kindle file <a href="https://epub2kindle.com/">here</a>.</p>
       </div>
     </div>
   </section>
