--- a/books.html
+++ b/books.html
@@ -180,6 +180,16 @@
             <p class="books__category-name">Category</p>
             <p class="books__category-number">(10)</p>
           </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
         </div>
       </div>
 
