Complete basket page including mobile responsive.

--- a/basket.html
+++ b/basket.html
@@ -98,54 +98,58 @@
   <section class="basket">
     <div class="basket__container container">
 
-      <!-- Table Headings -->
-      <div class="basket__headings">
-        <h4 class="basket__headings--cover">Cover</h4>
-        <h4 class="basket__headings--title">Title</h4>
-        <h4 class="basket__headings--price">Price</h4>
-        <h4 class="basket__headings--remove">Remove</h4>
-      </div>
+      <!-- Allows basket contents to overflow with scroll on mobile devices -->
+      <div class="basket__mobile-scroll-wrapper">
 
-
-      <!-- Basket Item -->
-      <div class="basket__item">
-
-        <!-- Cover Image -->
-        <div class="basket__item--img-wrapper">
-          <img class="basket__item--img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+        <!-- Table Headings -->
+        <div class="basket__headings">
+          <h4 class="basket__headings--cover">Cover</h4>
+          <h4 class="basket__headings--title">Title</h4>
+          <h4 class="basket__headings--price">Price</h4>
+          <h4 class="basket__headings--remove">Remove</h4>
         </div>
 
-        <!-- Book Title -->
-        <p class="basket__item--title">Harry Potter and the Philosopher's Stone</p>
 
-        <!-- Price -->
-        <p class="basket__item--price">£7.99</p>
+        <!-- Basket Item -->
+        <div class="basket__item">
 
-        <!-- Remove -->
-        <form class="basket__item--remove">
-          <button type="submit" class="basket__item--remove-icon"><i class="fas fa-trash-alt"></i></button>
-        </form>
-      </div>
+          <!-- Cover Image -->
+          <div class="basket__item--img-wrapper">
+            <img class="basket__item--img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+          </div>
 
+          <!-- Book Title -->
+          <p class="basket__item--title">Harry Potter and the Philosopher's Stone</p>
 
-      <!-- Basket Item -->
-      <div class="basket__item">
+          <!-- Price -->
+          <p class="basket__item--price">£7.99</p>
 
-        <!-- Cover Image -->
-        <div class="basket__item--img-wrapper">
-          <img class="basket__item--img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+          <!-- Remove -->
+          <form class="basket__item--remove">
+            <button type="submit" class="basket__item--remove-icon"><i class="fas fa-trash-alt"></i></button>
+          </form>
         </div>
 
-        <!-- Book Title -->
-        <p class="basket__item--title">Harry Potter and the Philosopher's Stone</p>
 
-        <!-- Price -->
-        <p class="basket__item--price">£7.99</p>
+        <!-- Basket Item -->
+        <div class="basket__item">
 
-        <!-- Remove -->
-        <form class="basket__item--remove">
-          <button type="submit" class="basket__item--remove-icon"><i class="fas fa-trash-alt"></i></button>
-        </form>
+          <!-- Cover Image -->
+          <div class="basket__item--img-wrapper">
+            <img class="basket__item--img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+          </div>
+
+          <!-- Book Title -->
+          <p class="basket__item--title">Harry Potter and the Philosopher's Stone</p>
+
+          <!-- Price -->
+          <p class="basket__item--price">£7.99</p>
+
+          <!-- Remove -->
+          <form class="basket__item--remove">
+            <button type="submit" class="basket__item--remove-icon"><i class="fas fa-trash-alt"></i></button>
+          </form>
+        </div>
       </div>
 
 
