--- a/payment_confirmation.html
+++ b/payment_confirmation.html
@@ -105,7 +105,7 @@
       <p class="payment-confirmation__info alert"><strong>IMPORTANT</strong> - if you checked out as a guest, please make sure you download all your purchased titles before leaving this page. Once you have left this page you will not be able to return to it. If you require assistance, contact us and we can provide you with new download links.</p>
 
       <!-- Download Info -->
-      <p class="payment-confirmation__info">You can find the download links to your purchased e-book titles below. Simply click the link and your EPUB file will begin downloading. Thanks for using our service and we hope you enjoy your purchase!</p>
+      <p class="payment-confirmation__info">You can find the download links to your purchased e-book titles below. Simply click the link and your EPUB file will begin downloading.<br>Thanks for using our service and we hope you enjoy your purchase!</p>
 
 
       <!-- Download Item -->
