--- a/wishlist.html
+++ b/wishlist.html
@@ -126,7 +126,7 @@
 
           <!-- Add to Cart -->
           <form class="wishlist__item--add-to-cart">
-            <button type="submit" class="wishlist__item--add-to-cart-button button--primary">Add to Cart</button>
+            <button type="submit" class="wishlist__item--add-to-cart-button button--primary">Add to Basket</button>
           </form>
         </div>
 
@@ -147,14 +147,14 @@
 
           <!-- Add to Cart -->
           <form class="wishlist__item--add-to-cart">
-            <button type="submit" class="wishlist__item--add-to-cart-button button--primary">Add to Cart</button>
+            <button type="submit" class="wishlist__item--add-to-cart-button button--primary">Add to Basket</button>
           </form>
         </div>
       </div>
 
       <!-- Continue Shopping -->
       <div class="wishlist__continue-shopping">
-        <a href="books.html" class="wishlist__button button--positive">Continue Shopping</a>
+        <a href="books.html" class="wishlist__button button--positive button--large">Continue Shopping</a>
       </div>
 
     </div>
