Adjusted relative paths to work with local host.

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
   <!-- CSS
   --------------------------------------------------------->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- FONTS
   --------------------------------------------------------->
@@ -25,10 +25,10 @@
 
   <!-- FAVICON
   --------------------------------------------------------->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
 
 </head>
 <body id="top">
@@ -43,7 +43,7 @@
 
       <!-- Logo -->
       <div class="nav__logo">
-        <img src="/img/logo.png" alt="E-Biblio Logo">
+        <img src="img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Nav Links -->
@@ -107,21 +107,21 @@
       <div class="about__portraits">
         <!-- Team Member -->
         <div class="about__member">
-          <img src="/img/staff/claudia_thompson.jpg" alt="Claudia Thompson - site admin & customer relations" class="about__img">
+          <img src="img/staff/claudia_thompson.jpg" alt="Claudia Thompson - site admin & customer relations" class="about__img">
           <h4 class="about__name">Claudia Thompson</h4>
           <h5 class="about__role">Site Admin</h5>
         </div>
 
         <!-- Team Member -->
         <div class="about__member">
-          <img src="/img/staff/elizabeth_taylor.jpg" alt="Elizabeth Taylor - founder & owner" class="about__img">
+          <img src="img/staff/elizabeth_taylor.jpg" alt="Elizabeth Taylor - founder & owner" class="about__img">
           <h4 class="about__name">Elizabeth Taylor</h4>
           <h5 class="about__role">Founder & Owner</h5>
         </div>
 
         <!-- Team Member -->
         <div class="about__member">
-          <img src="/img/staff/jonathan_dawson.jpg" alt="Jonathan Dawson - back office & customer relations" class="about__img">
+          <img src="img/staff/jonathan_dawson.jpg" alt="Jonathan Dawson - back office & customer relations" class="about__img">
           <h4 class="about__name">Jonathan Dawson</h4>
           <h5 class="about__role">Back Office</h5>
         </div>
@@ -141,7 +141,7 @@
 
       <!-- Logo -->
       <div class="footer__logo">
-        <img src="/img/logo.png" alt="E-Biblio Logo">
+        <img src="img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Message -->
@@ -182,9 +182,9 @@
 
   <!-- JAVASCRIPT
   --------------------------------------------------------->
-  <script type='text/javascript' src="/js/navDropdown.js"></script>
-  <script type='text/javascript' src="/js/navScrollBackground.js"></script>
-  <script type='text/javascript' src="/js/burgerMenu.js"></script>
+  <script type='text/javascript' src="js/navDropdown.js"></script>
+  <script type='text/javascript' src="js/navScrollBackground.js"></script>
+  <script type='text/javascript' src="js/burgerMenu.js"></script>
 
 
   <!-- END DOCUMENT
