--- a/books.html
+++ b/books.html
@@ -12,7 +12,7 @@
 
   <!-- CSS
   --------------------------------------------------------->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- FONTS
   --------------------------------------------------------->
@@ -25,10 +25,10 @@
 
   <!-- FAVICON
   --------------------------------------------------------->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
 
 </head>
 <body id="top">
@@ -43,7 +43,7 @@
 
       <!-- Logo -->
       <div class="nav__logo">
-        <img src="/img/logo.png" alt="E-Biblio Logo">
+        <img src="img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Nav Links -->
@@ -200,7 +200,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -212,7 +212,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -224,7 +224,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -236,7 +236,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -248,7 +248,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -260,7 +260,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -272,7 +272,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -284,7 +284,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -296,7 +296,7 @@
           <!-- Book Grid Item -->
           <div class="book-grid__item">
             <a href="book_details.html" class="book-grid__link">
-              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <img class="book-grid__img" src="img/book_covers/placeholder.jpg" alt="placeholder">
               <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
             </a>
             <a href="books.html" class="book-grid__link">
@@ -321,7 +321,7 @@
 
       <!-- Logo -->
       <div class="footer__logo">
-        <img src="/img/logo.png" alt="E-Biblio Logo">
+        <img src="img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Message -->
@@ -362,9 +362,9 @@
 
   <!-- JAVASCRIPT
   --------------------------------------------------------->
-  <script type='text/javascript' src="/js/navDropdown.js"></script>
-  <script type='text/javascript' src="/js/navScrollBackground.js"></script>
-  <script type='text/javascript' src="/js/burgerMenu.js"></script>
+  <script type='text/javascript' src="js/navDropdown.js"></script>
+  <script type='text/javascript' src="js/navScrollBackground.js"></script>
+  <script type='text/javascript' src="js/burgerMenu.js"></script>
 
 
   <!-- END DOCUMENT
