--- a/wishlist.html
+++ b/wishlist.html
@@ -12,7 +12,7 @@
 
   <!-- CSS
   --------------------------------------------------------->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- FONTS
   --------------------------------------------------------->
@@ -25,10 +25,10 @@
 
   <!-- FAVICON
   --------------------------------------------------------->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
 
 </head>
 <body id="top">
@@ -43,7 +43,7 @@
 
       <!-- Logo -->
       <div class="nav__logo">
-        <img src="/img/logo.png" alt="E-Biblio Logo">
+        <img src="img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Nav Links -->
@@ -115,7 +115,7 @@
 
           <!-- Cover Image -->
           <div class="wishlist__item--img-wrapper">
-            <img class="wishlist__item--img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <img class="wishlist__item--img" src="img/book_covers/placeholder.jpg" alt="placeholder">
           </div>
 
           <!-- Book Title -->
@@ -136,7 +136,7 @@
 
           <!-- Cover Image -->
           <div class="wishlist__item--img-wrapper">
-            <img class="wishlist__item--img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <img class="wishlist__item--img" src="img/book_covers/placeholder.jpg" alt="placeholder">
           </div>
 
           <!-- Book Title -->
@@ -171,7 +171,7 @@
 
       <!-- Logo -->
       <div class="footer__logo">
-        <img src="/img/logo.png" alt="E-Biblio Logo">
+        <img src="img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Message -->
@@ -212,9 +212,9 @@
 
   <!-- JAVASCRIPT
   --------------------------------------------------------->
-  <script type='text/javascript' src="/js/navDropdown.js"></script>
-  <script type='text/javascript' src="/js/navScrollBackground.js"></script>
-  <script type='text/javascript' src="/js/burgerMenu.js"></script>
+  <script type='text/javascript' src="js/navDropdown.js"></script>
+  <script type='text/javascript' src="js/navScrollBackground.js"></script>
+  <script type='text/javascript' src="js/burgerMenu.js"></script>
 
 
   <!-- END DOCUMENT
