Update comment formatting.

--- a/book_details.html
+++ b/book_details.html
@@ -81,7 +81,8 @@
 
 
 
-  <!-- Page Banner -->
+  <!-- Page Banner
+  ------------------------------------->
   <div class="page-banner">
     <!-- Page Banner BG Image Overlay -->
     <div class="page-banner__bg-overlay"></div>
@@ -94,7 +95,8 @@
 
 
 
-  <!-- Page Content -->
+  <!-- Page Content
+  ------------------------------------->
   <section class="book-details">
     <div class="book-details__container container">
 
